# innowise_laboratory

lecture_2/: main.py
lecture_3/: main.py
lecture_4/: queries.sql  school.db
lecture_5/: main.py
lecture_5/book_api/: pyproject.toml
lecture_5/book_api/books/: router.py
lecture_5/books/: database.py  models.py  schemas.py  usefull_moduls.py
lecture_6/: Dockerfile  pyproject.toml
lecture_6/book_api/: main.py
lecture_6/book_api/books/: database.py  models.py  router.py  usefull_moduls.py
